<resources>
    <!--Login-->
    <string name="app_name">MyRxDemo</string>
    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <!--use in set fragment-->
    <string name="pay_statistics">收银统计</string>
    <string name="coupon_statistics">验券统计</string>
    <string name="key_vibraile">按键提醒</string>
    <string name="portion_discount">部分折扣</string>
    <string name="paylog_print">收银记录打印</string>
    <string name="input_point">输入小数点</string>
    <string name="pay_set">收银设置</string>
    <string name="print_number">打印张数</string>
    <string name="log_again">重新签到</string>
    <string name="member_statistics">会员统计</string>
    <string name="change_camera2">扫码切换</string>
    <string name="member_pay">会员收银</string>
    <string name="wechat_pay">微信支付</string>
    <string name="flash_light_close">关</string>
    <string name="flash_light_open">开</string>
    <string name="product_env">正式环境</string>
    <string name="test_env">测试环境</string>
    <string name="please_input_address">请输入地址！</string>
    <string name="please_input_code">请输入机构号!</string>
    <string name="please_again_login">请退出重新登录</string>
    <string name="acc_mechanism_code">汇卡机构号</string>
    <string name="bt_printer">蓝牙打印机</string>
    <string name="auto_login"> 自动登录 </string>
    <string name="modify_authcode">修改授权码</string>
    <string name="develop_set">开发设置</string>
    <string name="service_phone">客服电话 : 4008-166-477</string>

</resources>
